--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <li><a href="#be-aware-of-your-influence">Be aware of your influence</a></li>
 <li><a href="#silence-feels-strange-but-is-o.k.">Silence feels strange but is o.k.</a></li>
 <li><a href="#keep-your-questions-simple">Keep your questions simple</a></li>
+<li><a href="#dont-make-the-user-the-designer">Don’t make the user the designer</a></li>
 </ul></li>
-<li><a href="#dont-make-the-user-the-designer">Don't make the user the designer</a></li>
 <li><a href="#referring-back">Referring back</a><ul>
 <li><a href="#referring-back-for-further-elaboration">Referring back for further elaboration</a></li>
 <li><a href="#referring-back-to-check-your-understanding">Referring back to check your understanding</a></li>
@@ -401,7 +401,7 @@
 </blockquote>
 <p>I had rarely someone who did not agree to being recorded. If that happens you can ask if they have any specific worries – possibly you can inform them about that specific aspect and they might agree when they have additional information.</p>
 <blockquote>
-<p>[Example from an in-house research project] »Audio recording… I’m not sure about this…« »Thats fine with me. Though, may I ask what worries are?« »Hmm…yeah, I don't like, you know, human resources to get that data«</p>
+<p>[Example from an in-house research project] »Audio recording… I’m not sure about this…« »Thats fine with me. Though, may I ask what worries are?« »Hmm… yeah, I don't like, you know, human resources to get that data«</p>
 <p>»I understand your concern. It is fine if you don't agree but I can assure you that Human Resources is a separate section. We don't share personal data and what we record today is not accessible to them. Also, all data that leaves my computer or the one of my colleague is being anonymized and we remove all data that points to you as person, including names, workplace and so on.</p>
 </blockquote>
 <p>If they don’t agree, just stick with writing notes.</p>
@@ -457,11 +457,11 @@ conversation: You ask questions, the user answered them. -->
 <blockquote>
 <p>»It was great to hear that you exchange files by mail!« (Since you may have already thought of a feature that might be helpful in that case)</p>
 </blockquote>
-<p>But the participant will try to be a nice person him/herself and probably try to make you happy by going on about the problems with files in mails even though sending files per mail is possibly not that bad in the participant’s view. Instead of reassuring the participant using judgements and emotions, focus on the fact that you got information you that helps you:</p>
+<p>But the participant will try to be a nice person him/herself and probably try to make you happy by going on about the problems with files in mails even though sending files per mail is possibly not that bad in the participant’s view. Instead of reassuring the participant using judgments and emotions, focus on the fact that you got information you that helps you:</p>
 <blockquote>
 <p>»That was interesting to hear –«</p>
 </blockquote>
-<p>Possibly you could even wrap the information up »So you…« and/or refer to an area you like further information about. So it will be clear that you care for the information and listened well – without casting some judgement on what was told to you.</p>
+<p>Possibly you could even wrap the information up »So you…« and/or refer to an area you like further information about. So it will be clear that you care for the information and listened well – without casting some judgment on what was told to you.</p>
 <h3 id="body-language">Body Language</h3>
 <figure>
 <img src="images/bodyPostureBad.jpg" alt="not-so-good posture" class="portrait" /><figcaption>not-so-good posture</figcaption>
@@ -607,29 +607,27 @@ conversation: You ask questions, the user answered them. -->
 <p>»Can you describe how you align these elements?« [Answer]</p>
 <p>»What is good about the resulting design? « [Answer]</p>
 </blockquote>
-<h2 id="dont-make-the-user-the-designer">Don't make the user the designer</h2>
-<p>It is tempting to skip investigating the »how« and »why« of the participant’s work and to ask the participant instead directly<br />
+<h3 id="dont-make-the-user-the-designer">Don’t make the user the designer</h3>
+<p>It is tempting to skip investigating the »how« and »why« of the participant’s work and to ask the participant directly<br />
 how the final product should be like.</p>
 <blockquote>
-<p>Which function do you need for aligning objects?</p>
+<p>Question: Which function do you need for aligning objects? Answer: Yes, there should be a button for, like equal distributions… here. It should be easy, so it should have a button with a ›distr‹ on it in red, so I don’t oversee it…</p>
 </blockquote>
-<p>This is basically asking the user for the design of the software.</p>
-<blockquote>
-<p>Yes, there should be a button for, like equal distributions… here. It should be easy, so it should have a button with a ›distr‹ on it in red, so I don’t oversee it…</p>
-</blockquote>
-<p>Asking the user for a design sounds like a reasonable thing to do – the resulting designs would be directly based on the suggestions of the participant.</p>
-<p>But it usually leads to disastrous results. Even for experienced designers it may be hard to come up with a good interface which is easy to learn and efficient to use. And even experienced designers take time, often creating multiple versions which are then tested. How should somebody inexperienced in that task come up with a great interface spontaneously?</p>
-<p>Another (highly tempting) way of »making the participant the designer« is to ask for the usefulness of hypothetical functions that you fancy yourself:</p>
+<p>A variation of it is asking if a design you suggest should be used:</p>
 <blockquote>
 <p>Would a function for choosing a color scheme help you?</p>
 </blockquote>
-<p>This is like asking »Do you want an additional tool which might be useful at some point and get it for free?«. If the participant can think of a few occasions in which such a tool <em>might</em> be useful, the answer will be »yes«. In addition, nothing can be found out about the »how« and »why« of the participant's work – just like with other questions that ask for »yes« or »no« outcomes.</p>
-<p>If you <em>really</em> want to discuss a function instead of focusing on what the participant does and why this is done, give some context to the question and tie it to a specific situation.</p>
+<p>Asking the user for a design sounds like a reasonable thing to do – the resulting designs would be directly based on the suggestions of the participant.</p>
+<p>But it usually leads to bad design results: Even for experienced designers it may be hard to come up with a good interface which is easy to learn and efficient to use. And even experienced designers take time, often creating multiple versions which are then tested. How should somebody inexperienced in that task come up with a great interface spontaneously?</p>
+<!-- could be more crisp and slightly more extensive: -->
+<p>Asking the user for a design also makes your research less useful. You will get to know that a participant thinks a particular design would be useful. But you don't get to know about the »how« and »why« of the user’s work.</p>
+<p>If you <em>really</em> want to discuss a design suggestion, use it to find out more about the »how« and »why« of the user’s work and tie it to a specific situation.</p>
 <blockquote>
-<p>We think of a system in which colors can be changed like you just changed the paragraph-styles. How would such a feature be relevant or not in the task you just described?</p>
+<p><em>[Design Suggestion:]</em> We think of a system in which colors can be changed like you just changed the paragraph-styles. <em>[Encouraging to tell more about the activity:]</em> How would such a feature be relevant or not <em>[Specific situation:]</em> in the task you just described?</p>
 </blockquote>
-<p>Thus, you can get more information on the tasks for which the feature could be useful. The question is not tied to all possible situations but to a specific one.</p>
-<p>Asking the user for design ideas and functions is tempting but rarely useful. If possible, avoid it and concentrate on the finding about how and why they work the way they do. If you really need to ask for designs or function ideas, tie them to a specific context and ask for descriptive answers instead of asking if something in general might be good or not.</p>
+<p>Thus, you can get more information on the <em>tasks</em> for which the feature could be useful. The question is not concerning a vague, general future use but to a specific one.</p>
+<p><br />
+Asking the user for design ideas is tempting but rarely useful. If possible, avoid it and concentrate on the finding about how and why they work the way they do.</p>
 <h2 id="referring-back">Referring back</h2>
 <p>In this section I will demonstrate how to maintain flow and elicit further information by referring to previous answers or demonstrations.</p>
 <h3 id="referring-back-for-further-elaboration">Referring back for further elaboration</h3>
@@ -711,17 +709,28 @@ how the final product should be like.</p>
 <figure>
 <img src="images/notizenKlemmbrett.jpg" alt="making notes on a clipboard" class="portrait" /><figcaption>making notes on a clipboard</figcaption>
 </figure>
-<p>During the interview you will take brief notes. This is rather similar like taking notes in school or university: You go for the gist of what was said but you don't write down the exact words (Except in the case you find a particular expression itself important). One utterance or observation concerning one topic goes in one line.</p>
-<p>You can’t just look at your note sheet and write down what the participants says without ever looking at him/her. So you need to do the notetaking in addition to observing, listening and asking.</p>
-<p>If you don’t care too much about your handwriting you can write notes without much looking at the paper except for some occasional glances. In case you find something very important and fear forgetting it, you can ask the participant to repeat the utterance – but keep this to a minimum.</p>
-<p>If you can, try to provide some context in your notes. If a note has some own context information attached to it, it can be understood on its own, too.</p>
-<blockquote>
+<!-- SECTION: INTRO -->
+<p>During the interview you will take brief notes. This is rather similar like taking notes in school or university: You go for the gist of what was said but you don't write down the exact words (Except in the case you find a particular expression itself important). One utterance or observation concerning one topic goes in one line, bullet-point style.</p>
+<p>  <!-- SECTION: TECHNIQUE --></p>
+<p>Your main tasks in the interview are to listen and to observe. When you look at your notesheet and think about what to write down, listening and observing don't work well. Try too keep it as unobtrusive as possible.</p>
 <ul>
-<li><p>Rather than writing <em>»she clicks«</em> (what? Why?) you could write <em>»Clicks save button, has finished balancing the elements«</em> or the like.</p></li>
-<li><p>Rather than »creates empty page« write »creates empty pages to organize drafts«</p></li>
+<li>If you don’t care too much about your handwriting you can write notes without much looking at the paper except for some occasional glances (the method has its limits, though)</li>
+<li>Because of the difficulties of balancing observing, listening and notetaking, there are obvious benefits of a partner who does the research with you. One person can ask questions and guide through the research, the other person takes notes. Both observe and listen.</li>
+<li><!-- audio: you can afford to skip writing down verbatim comments of the person; -->
+If you record audio in parallel you can be more relaxed when writing what was <em>said</em>. However, you still need to take notes to keep what you observed. This can also be very useful when you listen to the audio later and wonder what was referred to when the participant refers to things as »it« and »that« – without notes it can be hard to reconstruct what the participant was talking about.</li>
 </ul>
+<p> </p>
+<!-- expect to write lots of notes. Depending on person. For 30 min 2 DINA4-->
+<p>When I take notes in research I write often about 1 A4 page each 15min., sometimes more, sometimes less. So it does not make sense to try to write everything on one sheet or even in some space left on the cheat-sheet with your questions on it.</p>
+<figure>
+<img src="images/notesheet.png" alt="Example for a sheet with research notes, written ca. over 20min" /><figcaption>Example for a sheet with research notes, written ca. over 20min</figcaption>
+</figure>
+<p>  <!-- SECTION: CONTENT --> You will supplement, transcribe and analyze your notes after the data gathering. Thus you need to be able to make sense of them later. Between collecting the data and reviewing your notes, the <em>context</em> is easily forgotten: If you just write «empty page« it may make totally sense at the moment you write that, seeing what is happening and knowing what happened before and after. But without that implicit knowledge »empty page« does not make much sense.</p>
+<blockquote>
+<p>Rather than »creates empty page« write »creates empty pages to organize drafts«</p>
+<p>Instead of »changes objects« write »Changes object size to match grid«</p>
 </blockquote>
-<p>If your notes have a meaning on their own it will be far easier to analyze them later.</p>
+<p>  <!--reflect.--> When you use your notes in subsequent steps you will read lines that don't make sense to you anymore or you feel the need for particular information. Note what was missing from the notes; maybe attach a brief comment on a sticky note to them. This is useful to learn how to take better notes.</p>
 <h3 id="audio">Audio</h3>
 <p>Unlike making notes on paper, making an audio recording is a rather passive process except for pressing the record button.</p>
 <p>I recommend using audio recordings – it is a useful supplement to your notes. It will record the audio during the research session so that you can listen to what was said hereafter. Note that it is not a perfect capture of all that happened: It records only sound, so if the participant points to the screen and refers to »this«, the recording is not much of help.</p>
@@ -991,7 +1000,7 @@ This is useful when designing, since you can refer to the title instead of consi
 </blockquote>
 <h2 id="doing-the-right-analysis">Doing the »right« Analysis</h2>
 <p>The data analysis is done by inferring themes from several data points. Thus the process is empirical (as it is based on gathered data) but if the same data is used, analysis made by different people will differ. This is because the result of the analysis depends on the reasonable but still individual and debatable interpretation of the data. You could say that <em>»looking at last years design to quickly reuse elements«</em> belongs to a theme concerned with <em>»I want to save time«</em> or to one related to the topic of <em>»reviewing designs for inspiration«</em> (given that it could serve both from the user's perspective).</p>
-<p>There is no »right« or »wrong« nor a clear cut criteria of being »close enough« to the data when you group your data in themes. Instead of having a clear, measurable rule like the »you must have p&lt;0.05 significance« <a href="#fn5" class="footnoteRef" id="fnref5"><sup>5</sup></a> in statistics , most important is that your analysis is plausible (instead of »right« or »wrong«).</p>
+<p>There is no »right« or »wrong« nor a clear cut criterion of being »close enough« to the data when you group your data in themes. Instead of having a clear, measurable rule like the »you must have p&lt;0.05 significance« <a href="#fn5" class="footnoteRef" id="fnref5"><sup>5</sup></a> in statistics , most important is that your analysis is plausible (instead of »right« or »wrong«).</p>
 <p>I compare the process of analysis to building a house from a pile of Lego<sup>®</sup> bricks. These bricks are like the not-yet-analyzed data you start with. When you build a house out of these bricks, there is no »right« building. But neither is it a process which is arbitrary.</p>
 <div class="gallery two">
 <figure>
