new version compiled

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="main">
 <header>
 <h1 class="title">A Beg­inner’s Guide to Finding User Needs</h1>
-<h2 class="author">Jan Dittrich</h2>
+<p class="author">Jan Dittrich</p>
 </header>
 <nav id="TOC">
 <ul>
