--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 </ul></li>
 <li><a href="#introduction">Introduction</a><ul>
 <li><a href="#why-should-i-use-the-methods-described-in-this-book">Why should I use the methods described in this book?</a></li>
-<li><a href="#is-this-like-usability-testing">Is this like usability testing?</a><ul>
-<li><a href="#couldnt-i-just-as-what-they-want">Couldn't I just as what they want?</a></li>
-</ul></li>
+<li><a href="#is-this-like-usability-testing">Is this like usability testing?</a></li>
+<li><a href="#couldnt-i-just-ask-what-they-want">Couldn't I just ask what they want?</a></li>
 <li><a href="#in-which-situationsproject-state-can-i-use-these-methods">In which situations/project state can I use these methods?</a></li>
 <li><a href="#example-for-user-need-research-e-learning">Example for User Need Research: e-Learning</a></li>
 <li><a href="#this-texts-structure">This text’s structure</a></li>
@@ -158,7 +157,7 @@
 <h2 id="is-this-like-usability-testing">Is this like usability testing?</h2>
 <p>The methods described in this book are different from common usability testing. Testing is great for finding out about users’ problems, existing bugs and the possibilities to tweak an existing product. However, usability tests tell you little about the »why« and »how« of users’ work.</p>
 <p>Often, usability testing is done with a nearly finished product, at a location users come to (like a testing lab) and with set tasks for them to do. The methods I will demonstrate here can be applied if you have a product but also if you only have rough ideas about an area you are interested in designing for. Also, we will strive for getting the information in the context where the interaction usually happens (not in a lab) and observe tasks that the user would just do in contrast to set ones. This allows us to explore the actual actions and the reasons behind them – because even if you might be puzzled about some things you observe they usually make perfect sense for the users.</p>
-<h3 id="couldnt-i-just-as-what-they-want">Couldn't I just as what they want?</h3>
+<h2 id="couldnt-i-just-ask-what-they-want">Couldn't I just ask what they want?</h2>
 <p>Since we talk about finding user needs, an obvious question is if we could not just ask them what they want and just build it. But this may not be a good idea.</p>
 <p>Usually, people want a better version of what they already have. Henry Ford allegedly said »If I had asked people what they wanted, they would have said faster horses«. Instead of faster horses, Ford sold a product that satisfied an underlying motivation – getting quickly from A to B – instead of the specific wish.</p>
 <p>Getting to know about the underlying motivation (why do they want to get from A to B?), the activities (How do they currently get from A to B) and their problems (What is currently unpleasant about getting from A to B) is what helps us to understand users better.</p>
