--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 </header>
 <nav id="TOC">
 <ul>
-<li><a href="#license">License</a><ul>
+<li><a href="#about-this-book">About this book</a><ul>
+<li><a href="#license">License</a></li>
 <li><a href="#contributers">Contributers</a></li>
 <li><a href="#suggestions-and-feedback">Suggestions and Feedback</a></li>
 </ul></li>
 <li><a href="#introduction">Introduction</a><ul>
 <li><a href="#why-should-i-use-the-methods-described-in-this-book">Why should I use the methods described in this book?</a></li>
-<li><a href="#is-this-like-usability-testing">Is this like usability testing?</a><ul>
-<li><a href="#couldnt-i-just-as-what-they-want">Couldn't I just as what they want?</a></li>
-</ul></li>
+<li><a href="#is-this-like-usability-testing">Is this like usability testing?</a></li>
+<li><a href="#couldnt-i-just-ask-what-they-want">Couldn't I just ask what they want?</a></li>
 <li><a href="#in-which-situationsproject-state-can-i-use-these-methods">In which situations/project state can I use these methods?</a></li>
 <li><a href="#example-for-user-need-research-e-learning">Example for User Need Research: e-Learning</a></li>
 <li><a href="#this-texts-structure">This text’s structure</a></li>
@@ -139,15 +139,16 @@
 </ul></li>
 </ul>
 </nav>
-<h1 id="license" class="unnumbered">License</h1>
+<h2 id="about-this-book">About this book</h2>
+<h3 id="license" class="unnumbered">License</h3>
 <p>Text and images are under the following License (if not stated otherwise)</p>
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/jdittrich" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 <p>Libraries used for this webpage have their own licenses and are <em>not</em> covered by the Creative Commons license above.</p>
-<h2 id="contributers" class="unnumbered">Contributers</h2>
+<h3 id="contributers" class="unnumbered">Contributers</h3>
 <ul>
 <li><a href="https://github.com/lisacharlotterost">lisacharlotterost</a></li>
 </ul>
-<h2 id="suggestions-and-feedback" class="unnumbered">Suggestions and Feedback</h2>
+<h3 id="suggestions-and-feedback" class="unnumbered">Suggestions and Feedback</h3>
 <p>If you are on github: <a href="https://github.com/jdittrich/userNeedResearchBook/issues">file an issue</a></p>
 <p>Otherwise you can write me a mail: <em>dittrich.c.jan AT gmail DOTcom</em></p>
 <h1 id="introduction">Introduction</h1>
@@ -158,7 +159,7 @@
 <h2 id="is-this-like-usability-testing">Is this like usability testing?</h2>
 <p>The methods described in this book are different from common usability testing. Testing is great for finding out about users’ problems, existing bugs and the possibilities to tweak an existing product. However, usability tests tell you little about the »why« and »how« of users’ work.</p>
 <p>Often, usability testing is done with a nearly finished product, at a location users come to (like a testing lab) and with set tasks for them to do. The methods I will demonstrate here can be applied if you have a product but also if you only have rough ideas about an area you are interested in designing for. Also, we will strive for getting the information in the context where the interaction usually happens (not in a lab) and observe tasks that the user would just do in contrast to set ones. This allows us to explore the actual actions and the reasons behind them – because even if you might be puzzled about some things you observe they usually make perfect sense for the users.</p>
-<h3 id="couldnt-i-just-as-what-they-want">Couldn't I just as what they want?</h3>
+<h2 id="couldnt-i-just-ask-what-they-want">Couldn't I just ask what they want?</h2>
 <p>Since we talk about finding user needs, an obvious question is if we could not just ask them what they want and just build it. But this may not be a good idea.</p>
 <p>Usually, people want a better version of what they already have. Henry Ford allegedly said »If I had asked people what they wanted, they would have said faster horses«. Instead of faster horses, Ford sold a product that satisfied an underlying motivation – getting quickly from A to B – instead of the specific wish.</p>
 <p>Getting to know about the underlying motivation (why do they want to get from A to B?), the activities (How do they currently get from A to B) and their problems (What is currently unpleasant about getting from A to B) is what helps us to understand users better.</p>
@@ -816,7 +817,7 @@ If you record audio in parallel you can be more relaxed when writing what was <e
 <h3 id="diagrams-1">Diagrams</h3>
 <p>A big advantage of diagrams are that the data gathering and documentation happen at the same time. So, there is not much to add. Happy diagramming!.</p>
 <h1 id="review-your-data">Review your data</h1>
-<p>After our research session we need to take care that we can use much rich data in our later analysis.</p>
+<p>After our research session we need to take care that we can use the rich data in our later analysis.</p>
 <p>When collecting the data with the participant you will be very busy listening and thinking of following questions. So you may not be able to keep up with writing notes and drawing sketches. To make the most of our data, we supplement our notes, sketches and diagrams and add some information about the context of the data gathering to close gaps and to help us to keep all the data ordered.</p>
 <p>There are two ways to supplement your data: From memory and from additional recordings, like an audio recording.</p>
 <p>Supplementing your data should be done as soon as possible after the research session. I recommend to schedule the data gathering in a way that you have some time directly after the session to supplement and order your data.</p>
@@ -1535,7 +1536,10 @@ Before:</p>
 <h2 id="consider-the-audiences-needs">Consider the audiences needs</h2>
 <p>Who will recieve the research results and what interests do they have? There may be different stakeholders with different needs, e.g.</p>
 <ul>
-<li>Management Programmers Designers …</li>
+<li>Management</li>
+<li>Programmers</li>
+<li>Designers</li>
+<li>…</li>
 </ul>
 <p>Some of their needs align, some may differ. So before you start you should ask who will recieve the results and what specific interests they have. Also inquire if there is any preferred format. Some may only take written reports, others may be used to slidedecks.</p>
 <h2 id="first-things-first">First things first</h2>
@@ -1723,6 +1727,7 @@ We appreciate your participation.</p>
 </section>
 </div>
 </div>
+
 <script src="libs/jquery.js"></script>
 <script src="libs/toc_jquery.js"></script>
 <script>
