--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </ul></li>
 </ul></li>
 <li><a href="#review-your-data">Review your data</a><ul>
-<li><a href="#supplement-data-my-data-from-memory">Supplement data my data from memory</a></li>
+<li><a href="#supplement-data-from-memory">Supplement data from memory</a></li>
 <li><a href="#transcribe-your-notes">Transcribe your notes</a></li>
 <li><a href="#possibly-supplement-from-audio-recordings">Possibly supplement from audio recordings</a></li>
 <li><a href="#order-and-archive-your-data">Order and archive your data</a></li>
@@ -283,14 +283,14 @@
 <p>I usually have three aspects I think of when I prepare my questions:</p>
 <ol type="1">
 <li>Motivations, what the user wants to archive, what is important for him/her?</li>
-<li>Activities, what does the user?</li>
+<li>Activities, what does the user do?</li>
 <li>Problems: what interferes with the users activities and motivations?</li>
 </ol>
 <p>There could be many other aspects, but I find these three good because</p>
 <ul>
 <li>They cover a wide range of possible topics questions</li>
 <li>They cover design relevant topics</li>
-<li>They can be easily remembered even in the midst of research: Three points are few and in addition you can use the mnemonic M-A-P: <strong>M</strong>otivations,<strong>A</strong>ctivities, <strong>P</strong>roblems.</li>
+<li>They can be easily remembered even in the midst of research: Three points are few and in addition you can use the mnemonic M-A-P: <strong>M</strong>otivations, <strong>A</strong>ctivities, <strong>P</strong>roblems.</li>
 </ul>
 <p>Let me show you the questions I came up with for finding out about the needs of designers who create layouts.</p>
 <h4 id="activities">Activities</h4>
@@ -821,7 +821,7 @@ If you record audio in parallel you can be more relaxed when writing what was <e
 <p>When collecting the data with the participant you will be very busy listening and thinking of following questions. So you may not be able to keep up with writing notes and drawing sketches. To make the most of our data, we supplement our notes, sketches and diagrams and add some information about the context of the data gathering to close gaps and to help us to keep all the data ordered.</p>
 <p>There are two ways to supplement your data: From memory and from additional recordings, like an audio recording.</p>
 <p>Supplementing your data should be done as soon as possible after the research session. I recommend to schedule the data gathering in a way that you have some time directly after the session to supplement and order your data.</p>
-<h2 id="supplement-data-my-data-from-memory">Supplement data my data from memory</h2>
+<h2 id="supplement-data-from-memory">Supplement data from memory</h2>
 <p>I add data that I did not write down yet. In this case I <em>add</em> them, like</p>
 <blockquote>
 <p>[ADDITION]:</p>
@@ -1582,45 +1582,40 @@ Before:</p>
 <p>There are lots of books which explain how to write concise and easy-to-get text. The most efficient guide I know was given by George Orwells in »Politics and the English Language« – I quote:</p>
 <blockquote>
 <ol type="1">
-<li>Never use a metaphor, simile or other figure of speech which you are used to seeing in print. &gt; &gt; 2. Never use a long word where a short one will do. &gt; &gt;</li>
-<li>If it is possible to cut a word out, always cut it out. &gt; &gt; 4. Never use the passive where you can use the active. &gt; &gt; 5. Never use a foreign phrase, a scientific word or a jargon word if you can think of an everyday English equivalent. &gt; &gt; 6. Break any of these rules sooner than say anything barbarous. <a href="#fn4" class="footnoteRef" id="fnref4"><sup>4</sup></a></li>
+<li>Never use a metaphor, simile or other figure of speech which you are used to seeing in print.</li>
+<li>Never use a long word where a short one will do.</li>
+<li>If it is possible to cut a word out, always cut it out.</li>
+<li>Never use the passive where you can use the active.</li>
+<li>Never use a foreign phrase, a scientific word or a jargon word if you can think of an everyday English equivalent. &gt; &gt; 6. Break any of these rules sooner than say anything barbarous.</li>
 </ol>
 </blockquote>
+<p><a href="#fn4" class="footnoteRef" id="fnref4"><sup>4</sup></a></p>
 <p>In addition, read the text aloud – in particular, if you already noticed that you have had difficulties finding the right word or to express a complicated concept. If you need to re-read sentences to make sense of them or to stress the right words, you should go for a rewrite.</p>
 <h3 id="quotes">Quotes</h3>
 <p>Quotes convey the participant’s motivations and feelings. This is important to help others to have empathy with the users.</p>
 <blockquote>
-<p><strong>Rather abstract:</strong> Users like the alignment function &gt; &gt; <strong>Combined with Quote</strong>: Users like the alignment function. Sandy: »It is like doing work by magic – click! And its there!«</p>
+<p><strong>Rather abstract:</strong> Users like the alignment function</p>
+<p><strong>Combined with Quote</strong>: Users like the alignment function. Sandy: »It is like doing work by magic – click! And its there!«</p>
 </blockquote>
 <p>Remember to protect the participant's identity if they did not give you the permission to share their quotes or names. If they did not give you the permission, only share a plausible, but faked »quote« and don't use real names but faked ones as well. Don’t deceive your audience either: mention that the names and quotes are not real but are only corresponding to their actual counterparts.</p>
 <h3 id="scenarios">Scenarios</h3>
 <p>Activities don’t happen in isolation from each other: They depend on previous activities and (possible changing) motivations. One way to communicate a sequence of interrelated activities is a scenario. Simply put, a scenario is a short story written as text or given as a sequence of images (like a comic)</p>
 <p>A good framework for writing scenarios is asking yourself these questions:</p>
 <ul>
-<li><strong>Person</strong>: Who is the main person in the scenario? <strong>Motivations</strong>: Why</li>
-<li>does this person what he/she does? What is the motivation? <strong>Activities</strong>:</li>
-<li>What are the actions of the person and how are they done? <strong>Context</strong>: Where</li>
-<li>and When does the scenario take place?</li>
+<li><strong>Person</strong>: Who is the main person in the scenario?</li>
+<li><strong>Motivations</strong>: Why does this person what he/she does? What is the motivation?</li>
+<li><strong>Activities</strong>: What are the actions of the person and how are they done?</li>
+<li><strong>Context</strong>: Where and When does the scenario take place?</li>
 </ul>
-<p>Answer them in your scenario.</p>
+<p>Answer them in your scenario:</p>
 <blockquote>
-<p>Annika studies media culture and needs to finish here homework on »Cultural subconceptualist theory in the works of Koons« in order to hand the homework in on time. She goes to the library to see if the book on »Capitalism in the works of Rushdie« by Andreas Geoffrey contains arguments supporting her view on the structuralist paradigm. &gt; &gt; She enters the library and walks up to one of the computers standing in the corners of the library's halls. &gt; &gt; She wants to look up the name of the author, but she notes that she forgot the copy of the book that referenced the work. She still knows that »Rusdie« or »Rushdie« was in the title of the book she needs. After several trials she finds the right spelling of the name and, after scanning through a list, she finds the book she wants to read. The detail page of the search application gives the address of the library building she is in already and a code: »X0-3R52«… [scenario may continue]</p>
+<p>Annika studies media culture and needs to finish here homework on »Cultural subconceptualist theory in the works of Koons« in order to hand the homework in on time. She goes to the library to see if the book on »Capitalism in the works of Rushdie« by Andreas Geoffrey contains arguments supporting her view on the structuralist paradigm.</p>
+<p>She enters the library and walks up to one of the computers standing in the corners of the library's halls. She wants to look up the name of the author, but she notes that she forgot the copy of the book that referenced the work. She still knows that »Rusdie« or »Rushdie« was in the title of the book she needs. After several trials she finds the right spelling of the name and, after scanning through a list, she finds the book she wants to read. The detail page of the search application gives the address of the library building she is in already and a code: »X0-3R52«… [scenario may continue]</p>
 </blockquote>
 <p>You could as well create a scenario as a series of sketches, like a comic strip:</p>
-<div class="gallery four">
 <figure>
-<img src="images/szenario2_1.png" alt="the search interface of the library&#39;s computer" class="portrait" /><figcaption>the search interface of the library's computer</figcaption>
+<img src="images/Scenario-Bibliothek-all.svg" alt="1 the search interface of the library&#39;s computer 2 remembering the code. Is this character a zero or the letter ›O‹? 3 I can’t find the right shelf! 4 I&#39;d better ask somebody… …now I know where I need to go!" /><figcaption><strong>1</strong> the search interface of the library's computer <strong>2</strong> remembering the code. Is this character a zero or the letter ›O‹? <strong>3</strong> I can’t find the right shelf! <strong>4</strong> I'd better ask somebody… …now I know where I need to go!</figcaption>
 </figure>
-<figure>
-<img src="images/szenario2_2.png" alt="remembering the code. Is it a zero or the letter ›O‹?" class="portrait" /><figcaption>remembering the code. Is it a zero or the letter ›O‹?</figcaption>
-</figure>
-<figure>
-<img src="images/szenario2_3.png" alt="I can’t find the right shelf!" class="portrait" /><figcaption>I can’t find the right shelf!</figcaption>
-</figure>
-<figure>
-<img src="images/szenario2_4.png" alt="I&#39;d better ask somebody… now I know where I need to go!" class="portrait" /><figcaption>I'd better ask somebody… now I know where I need to go!</figcaption>
-</figure>
-</div>
 <h3 id="diagrams-2">Diagrams</h3>
 <figure>
 <img src="images/exampleDiagram_fileFlow.png" alt="A diagram showing the sources and flow of files used by university students" /><figcaption>A diagram showing the sources and flow of files used by university students</figcaption>
